argocd-ha-helm/base/argocd-server/deployment.yaml
---
# Source: argo-cd/templates/argocd-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-argocd-server
  labels:
    app.kubernetes.io/name: argocd-server
    helm.sh/chart: argo-cd-2.5.4
    app.kubernetes.io/instance: argo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: server
    app.kubernetes.io/version: "v1.6.1"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
      app.kubernetes.io/instance: argo
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-server
        helm.sh/chart: argo-cd-2.5.4
        app.kubernetes.io/instance: argo
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: argocd
        app.kubernetes.io/component: server
        app.kubernetes.io/version: "v1.6.1"
    spec:
      containers:
      - name: server
        image: argoproj/argocd:v1.6.1
        imagePullPolicy: IfNotPresent
        command:
        - argocd-server
        - --staticassets
        - /shared/app
        - --repo-server
        - argo-argocd-repo-server:8081
        - --loglevel
        - info
        - --redis
        - argo-argocd-redis:6379
        - --insecure
        volumeMounts:
        - mountPath: /app/config/ssh
          name: ssh-known-hosts
        ports:
        - name: server
          containerPort: 8080
          protocol: TCP
        
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 125m
            memory: 128Mi
      serviceAccountName: argocd-server
      volumes:
      - emptyDir: {}
        name: static-files
      - configMap:
          name: argocd-ssh-known-hosts-cm
        name: ssh-known-hosts
