argocd-ha-helm/base/argocd-server/ingress.yaml
---
# Source: argo-cd/templates/argocd-server/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-traefik-prod"
    kubernetes.io/ingress.class: "traefik"
    kubernetes.io/tls-acme: "true"
  name: argo-argocd-server
  labels:
    app.kubernetes.io/name: argocd-server
    helm.sh/chart: argo-cd-2.5.4
    app.kubernetes.io/instance: argo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: server
spec:
  rules:
    - host: delivery.test.io
      http:
        paths:
          - path: /
            backend:
              serviceName: argo-argocd-server
              servicePort: 80
  tls:
    - hosts:
      - delivery.test.io
      secretName: argocd-certificate-tls
